renamed css file from portfolioWireframe.css to index.css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Robert Kojima Wireframe</title>
-    <link rel="stylesheet" type="text/css" href="./portfolioWireframe.css">
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    <nav>Nav</nav>
+    <nav>
+        <ul>
+            <!-- <li><a class="brand" href="#">Home</a></li>-->
+            <li><a class="sandwich">☰</a></li>
+            <li><a class="links" href="#about-me">About</a></li>
+            <li><a class="links" href="#project-1">Projects</a></li>
+            <li><a class="links" href="#contact">Contact</a></li>
+            <li><a class="links" href="#">Resume</a></li>
+        </ul>
+    </nav>
     <section class="white-section" id="hero">
         <p>Hero</p>
     </section>
     <section class="gray-section" id="about-me">
         <p>About me</p>
     </section>
-    <section class="white-section" id="project-2">
+    <section class="white-section" id="project-1">
         <p>Project 1</p>
     </section>
     <section class="gray-section" id="project-1">
