added js to responsive menu so it opens and closes links in smaller devices

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <nav>
         <ul>
             <!-- <li><a class="brand" href="#">Home</a></li>-->
-            <li><a class="sandwich">☰</a></li>
-            <li><a class="links" href="#about-me">About</a></li>
-            <li><a class="links" href="#project-1">Projects</a></li>
-            <li><a class="links" href="#contact">Contact</a></li>
-            <li><a class="links" href="#">Resume</a></li>
+            <li><a class="sandwich" onclick="showLinks()">☰</a></li>
+            <li><a class="links" onclick="showLinks()" href="#about-me">About</a></li>
+            <li><a class="links" onclick="showLinks()" href="#project-1">Projects</a></li>
+            <li><a class="links" onclick="showLinks()" href="#contact">Contact</a></li>
+            <li><a class="links" onclick="showLinks()" href="#">Resume</a></li>
         </ul>
     </nav>
     <section class="white-section" id="hero">
@@ -28,10 +28,10 @@
     <section class="white-section" id="project-1">
         <p>Project 1</p>
     </section>
-    <section class="gray-section" id="project-1">
+    <section class="gray-section" id="project-2">
         <p>Project 2</p>
     </section>
-    <section class="white-section" id="project-2">
+    <section class="white-section" id="project-3">
         <p>Project 3</p>
     </section>
     <section class="gray-section" id="contact">
