added project images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="index.js"></script>
+    <script src="https://use.fontawesome.com/34a29c0043.js"></script>
 </head>
 <body>
     <nav>
@@ -27,15 +28,23 @@
     </section>
     <section class="white-section" id="project-1">
         <p>Project 1</p>
+        <img id="desktop-screenshot"src="./images/line-drive-screenshot.png">
     </section>
     <section class="gray-section" id="project-2">
         <p>Project 2</p>
+        <img id="mobile-screenshot" src="./images/remember-screenshot.png">
     </section>
     <section class="white-section" id="project-3">
         <p>Project 3</p>
+        <img id="mobile-screenshot" src="./images/twitch-api-screenshot.png">
     </section>
     <section class="gray-section" id="contact">
         <p>Contact</p>
+        <a href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>  
+        <div class="icons">
+            <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+            <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+        </div>
     </section>
 </body>
 </html>
