implementing hover on images

--- a/index.html
+++ b/index.html
@@ -25,21 +25,35 @@
     </section>
     <section class="gray-section" id="about-me">
         <p>About me</p>
+        <p>I've recently graduated from the Front End Web Development Career Path bootcamp at Thinkful. I'm currently looking for a junior fullstack developer position. What excites me is that there is so much to learn in the coding world; going to coding meetups had me thinking that learning is fun again. I am also starting to contribute on open source projects, such as Habitica. 
+        </p> 
     </section>
     <section class="white-section" id="project-1">
-        <p>Project 1</p>
-        <img id="desktop-screenshot"src="./images/line-drive-screenshot.png">
+        <p class="section-title">Project 1</p>
+        <img id="desktop-screenshot" src="./images/line-drive-screenshot.png">
+        <div class="img-overlay">
+            <a class="project-link live" href="https://line-drive-baseball.herokuapp.com">Repo</a>
+            <a class="project-link repo" href="https://github.com/rkojima/baseball-card-game">Live</a>         
+        </div>
     </section>
     <section class="gray-section" id="project-2">
-        <p>Project 2</p>
+        <p class="section-title">Project 2</p>
         <img id="mobile-screenshot" src="./images/remember-screenshot.png">
+        <div class="img-overlay">
+            <a class="project-link link-mobile live" href="https://murmuring-shore-62799.herokuapp.com/">Repo</a>
+            <a class="project-link link-mobile repo" href="https://github.com/rkojima/remember">Live</a>            
+        </div>
     </section>
     <section class="white-section" id="project-3">
-        <p>Project 3</p>
+        <p class="section-title">Project 3</p>
         <img id="mobile-screenshot" src="./images/twitch-api-screenshot.png">
+        <div class="img-overlay">
+            <a class="project-link link-mobile live" href="https://is-streaming.herokuapp.com/">Repo</a>
+            <a class="project-link link-mobile repo" href="https://github.com/rkojima/is-streaming">Live</a>
+        </div>
     </section>
     <section class="gray-section" id="contact">
-        <p>Contact</p>
+        <h3>Contact</h3>
         <a href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>  
         <div class="icons">
             <i class="fa fa-github fa-3x" aria-hidden="true"></i>
