changed spacing of links so redirects lead right to item. also changed property of pseudo-element

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <!-- <li><a class="brand" href="#">Home</a></li>-->
             <li><a class="sandwich" onclick="showLinks()">☰</a></li>
             <li class="list-link"><a class="links" onclick="showLinks()" href="#about-me">About</a></li>
-            <li class="list-link"><a class="links" onclick="showLinks()" href="#project-1">Projects</a></li>
+            <li class="list-link"><a class="links" onclick="showLinks()" href="#projects-header">Projects</a></li>
             <li class="list-link"><a class="links" onclick="showLinks()" href="#contact">Contact</a></li>
             <li class="list-link"><a class="links" onclick="showLinks()" href="#">Resume</a></li>
         </ul>
     </nav>
-    <section class="white-section" id="hero">
+    <section id="hero">
         <div class="hero-text">
             <h1 id="name">Robert Kojima</h1>
             <h1 id="occupation">Full Stack Developer</h1>
         </div>
     </section>
-    <section class="gray-section" id="about-me">
+    <section id="about-me">
         <h2>About me</h2>
         <p>I've recently graduated from the Fullstack Web Development bootcamp at Thinkful. I'm currently looking for a junior fullstack developer position. What excites me is that there is so much to learn in the coding world; going to coding meetups had me thinking that learning is fun again. I am also starting to contribute on open source projects, such as Habitica. 
         </p> 
     </section>
-    <h2>Projects</h2>
+    <h2 id="projects-header">Projects</h2>
     <section class="projects" id="project-1">
         <div class="project-left">
             <div class="project-image">
@@ -91,7 +91,7 @@
             </div>  
         </div>
     </section>
-    <section class="gray-section" id="contact">
+    <section id="contact">
         <h3>Contact</h3>
         <a href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>  
         <div class="icons">
