--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="list-link"><a class="links" onclick="showLinks()" href="#about-me">About</a></li>
             <li class="list-link"><a class="links" onclick="showLinks()" href="#projects-header">Projects</a></li>
             <li class="list-link"><a class="links" onclick="showLinks()" href="#contact">Contact</a></li>
-            <li class="list-link"><a class="links" onclick="showLinks()" href="#">Resume</a></li>
+            <!-- <li class="list-link"><a class="links" onclick="showLinks()" href="#">Resume</a></li> -->
         </ul>
     </nav>
     <section id="hero">
