made technologies into pills

--- a/index.html
+++ b/index.html
@@ -41,10 +41,19 @@
         <div class="project-right">
             <div class="project-info">
                 <h3 class="project-title">Line Drive Baseball</h3>
+                <p class="project-technologies">
+                    <span class="pill">React</span>
+                    <span class="pill">Express</span>
+                    <span class="pill">Node.js</span>
+                    <span class="pill">Mongoose</span>
+                    <span class="pill">Mongo</span>
+                    <span class="pill">Javascript</span>
+                    <span class="pill">HTML</span>
+                    <span class="pill">CSS</span>
+                </p>
                 <p class="project-description">A baseball card game using stats to battle. Check baseball stats of the 2016 season players, as well as the career stats from legends. Send players to battle using their strengths. 
                 </p>
-                <p class="project-technologies">Technologies: React, Express, Node.js, Mongoose, Mongo, Javascript, HTML, CSS
-                </p>
+
                 <div class="project-links">
                     <a class="project-link live" href="https://line-drive-baseball.herokuapp.com">Live</a>
                     <a class="project-link repo" href="https://github.com/rkojima/baseball-card-game">Repo</a>
@@ -61,9 +70,16 @@
         <div class="project-right">
             <div class="project-info">
                 <h3 class="project-title">Remember</h3>
-                <p class="project-description">Note taking for your books, to remember what you read. Put a book in your library, set a timer, and read. After the timer goes off, write down a note. Check your notes for each book in your library
+                <p class="project-technologies"> 
+                    <span class="pill">Express</span>
+                    <span class="pill">Node.js</span> 
+                    <span class="pill">Mongoose</span>
+                    <span class="pill">Mongo</span> 
+                    <span class="pill">Javascript</span> 
+                    <span class="pill">HTML</span>
+                    <span class="pill">CSS</span>
                 </p>
-                <p class="project-technologies">Technologies: Express, Node.js, Mongoose, Mongo, Javascript, HTML, CSS
+                <p class="project-description">Note taking for your books, to remember what you read. Put a book in your library, set a timer, and read. After the timer goes off, write down a note. Check your notes for each book in your library
                 </p>
                 <div class="project-links">
                     <a class="project-link link-mobile live" href="https://murmuring-shore-62799.herokuapp.com/">Live</a>
@@ -81,9 +97,13 @@
         <div class="project-right">
             <div class="project-info">
                 <h3 class="project-title">Is Streaming?</h3>
+                <p class="project-technologies">
+                    <span class="pill">Javascript</span>
+                    <span class="pill">HTML</span>
+                    <span class="pill">CSS</span>
+                </p>
                 <p class="project-description">A single page site that uses Twitch API to check whether a searched streamer is online or not. Also shows featured streamers.
                 </p>
-                <p class="project-technologies">Technologies: Javascript, HTML, CSS</p>
                 <div class="project-links">
                     <a class="project-link link-mobile live" href="https://is-streaming.herokuapp.com/">Live</a>
                     <a class="project-link link-mobile repo" href="https://github.com/rkojima/is-streaming">Repo</a>
