--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section id="about-me">
         <h2>About me</h2>
-        <p>I've recently graduated from the Fullstack Web Development bootcamp at Thinkful. I'm currently looking for a junior fullstack developer position. What excites me is that there is so much to learn in the coding world; going to coding meetups had me thinking that learning is fun again. I am also starting to contribute on open source projects, such as Habitica. 
+        <p>I've recently graduated from the Fullstack Web Development bootcamp at Thinkful. I'm currently looking for a junior full stack developer position. What excites me is that there is so much to learn in the coding world; going to coding meetups had me thinking that learning is fun again. I am also starting to contribute to open source projects, such as Habitica. 
         </p> 
     </section>
     <h2 id="projects-header">Projects</h2>
