--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="project-description">Note taking for your books, to remember what you read. Put a book in your library, set a timer, and read. After the timer goes off, write down a note. Check your notes for each book in your library
                 </p>
                 <div class="project-links">
-                    <a class="project-link link-mobile live" href="https://murmuring-shore-62799.herokuapp.com/">Live</a>
+                    <a class="project-link link-mobile live" href="https://remember-app-project.herokuapp.com/">Live</a>
                     <a class="project-link link-mobile repo" href="https://github.com/rkojima/remember">Repo</a>
                 </div>
             </div>
