added to description for remember project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <span class="pill">HTML</span>
                     <span class="pill">CSS</span>
                 </p>
-                <p class="project-description">Note taking for your books, to remember what you read. Put a book in your library, set a timer, and read. After the timer goes off, write down a note. Check your notes for each book in your library
+                <p class="project-description">Note taking for your books, to remember what you read. Because why read something if you're going to forget it? Put a book in your library, set a timer, and read. After the timer goes off, write down a note. Check your notes for each book in your library. 
                 </p>
                 <div class="project-links">
                     <a class="project-link link-mobile live" href="https://remember-app-project.herokuapp.com/">Live</a>
