changed email color

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         </div>
     </section>
     <section id="contact">
-        <h3>Contact</h3>
-        <a href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>  
+        <h3>Let's connect!</h3>
+        <a id="email-link" href="mailto:rkojima@berkeley.edu">rkojima@berkeley.edu</a>  
         <div class="icons">
             <a href="https://github.com/rkojima"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/robert-kojima/"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
