--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="list-link"><a class="links" onclick="showLinks('about-me')">About</a></li>
             <li class="list-link"><a class="links" onclick="showLinks('projects-header')">Projects</a></li>
             <li class="list-link"><a class="links" onclick="showLinks('contact')">Contact</a></li>
+            <li class="list-link"><a class="links" href="./files/Robert_Kojima_Resume.pdf">Resume</a></li>
             <!-- <li class="list-link"><a class="links" onclick="showLinks()" href="#">Resume</a></li> -->
         </ul>
     </nav>
